--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,9 +1,9 @@
-body {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+html {
+  height:100%;
+  min-height:100%;
+}
 
+body {
   animation: fadein .5s;
 }
 
@@ -68,9 +68,6 @@ main .active {
   width: 100%;
   height: auto;
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -79,7 +76,7 @@ main .active {
 }
 
 .cover-container, .cover-container-wide {
-    z-index: 2;
+    position: relative;
 }
 
 .home .bg-img {
