--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -63,15 +63,13 @@ main .active {
 }
 
 .bg-img {
-  min-height: 100%;
-  min-width: 1024px;
   width: 100%;
-  height: auto;
+  height: 100%;
   position: fixed;
 
-  background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
